--- a/local/sass/pages/_merchlist.scss
+++ b/local/sass/pages/_merchlist.scss
@@ -123,7 +123,7 @@ p.merchPrice.red {
     &-restock {
       position: absolute;
       background-color: $warning-em;
-      color: $white;
+      color: $black;
       top: 0.5rem;
       left: 0.5rem;
       font-weight: 700;
